--- a/rutas/Base.lproj/Main.storyboard
+++ b/rutas/Base.lproj/Main.storyboard
@@ -17,13 +17,13 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awl-sp-Znz">
                                 <rect key="frame" x="32" y="415.5" width="350" height="65"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="65" id="M1h-C6-ndg"/>
                                     <constraint firstAttribute="width" constant="350" id="NMQ-e1-dsk"/>
                                 </constraints>
-                                <state key="normal" title="SUBMIT">
-                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <state key="normal" title="INICIAR SESIÓN">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PASSWORD" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a6i-MC-P2l">
@@ -51,28 +51,28 @@
                                     <constraint firstAttribute="height" constant="29" id="sxd-jW-zEB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="highlightedColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECUPERAR CONTRASEÑA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHF-Y9-ehA">
                                 <rect key="frame" x="100" y="537.5" width="214" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7H2-vU-gDy">
                                 <rect key="frame" x="132" y="628" width="150" height="40"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="R2Z-83-was"/>
                                     <constraint firstAttribute="height" constant="40" id="zzP-1c-qCU"/>
                                 </constraints>
                                 <state key="normal" title="REGISTRARME">
-                                    <color key="titleColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="2Vx-FG-Srp" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-200" id="4gZ-dg-fkP"/>
                             <constraint firstItem="Ic0-rJ-hoV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7KW-Xm-tIP"/>
@@ -155,7 +155,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2hf-Jg-Jet" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="441" y="13"/>
+            <point key="canvasLocation" x="1370" y="746"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="d62-Mu-BTu">
+            <objects>
+                <viewController id="H90-WN-rKM" customClass="mapViewController" customModule="rutas" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QzG-Bi-gQg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wQ6-5c-j0i">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="wQ6-5c-j0i" firstAttribute="leading" secondItem="cRG-vc-xQ7" secondAttribute="leading" id="3GT-b4-3Ry"/>
+                            <constraint firstItem="cRG-vc-xQ7" firstAttribute="trailing" secondItem="wQ6-5c-j0i" secondAttribute="trailing" id="BTL-Pu-eUF"/>
+                            <constraint firstItem="cRG-vc-xQ7" firstAttribute="bottom" secondItem="wQ6-5c-j0i" secondAttribute="bottom" id="LdV-I7-Mvp"/>
+                            <constraint firstItem="wQ6-5c-j0i" firstAttribute="top" secondItem="cRG-vc-xQ7" secondAttribute="top" id="giZ-b7-2VR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cRG-vc-xQ7"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3SO-Pr-x3b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2680" y="438"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="AoD-Sl-wFE">
@@ -165,6 +191,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qwerty.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="bGn-wi-AYG">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="REGISTRO DE USUARIO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hDf-PI-Dr6">
                                 <rect key="frame" x="79" y="133.5" width="256.5" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
@@ -222,16 +251,20 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="1o8-ZE-6OU" firstAttribute="centerY" secondItem="M2B-F7-dZb" secondAttribute="centerY" constant="-200" id="44x-zM-Au0"/>
+                            <constraint firstItem="bGn-wi-AYG" firstAttribute="top" secondItem="M2B-F7-dZb" secondAttribute="top" id="Aed-8V-QyL"/>
                             <constraint firstItem="gLd-Mn-jVF" firstAttribute="centerX" secondItem="M2B-F7-dZb" secondAttribute="centerX" id="BQx-kh-d6r"/>
                             <constraint firstItem="Gk4-7s-1qO" firstAttribute="centerY" secondItem="M2B-F7-dZb" secondAttribute="centerY" constant="25" id="Gdp-cU-8Us"/>
                             <constraint firstItem="Gk4-7s-1qO" firstAttribute="centerX" secondItem="M2B-F7-dZb" secondAttribute="centerX" id="LEg-91-SFR"/>
                             <constraint firstItem="5UT-58-4Bn" firstAttribute="centerY" secondItem="M2B-F7-dZb" secondAttribute="centerY" constant="-125" id="Lhm-lO-Rc9"/>
                             <constraint firstItem="gLd-Mn-jVF" firstAttribute="centerY" secondItem="M2B-F7-dZb" secondAttribute="centerY" constant="125" id="Rsv-Ck-oxB"/>
+                            <constraint firstItem="bGn-wi-AYG" firstAttribute="leading" secondItem="jHK-Po-Idg" secondAttribute="leading" id="ZUd-FI-6hy"/>
                             <constraint firstItem="5UT-58-4Bn" firstAttribute="centerX" secondItem="M2B-F7-dZb" secondAttribute="centerX" id="ZjP-0o-ba5"/>
                             <constraint firstItem="CN7-IS-w4x" firstAttribute="centerY" secondItem="M2B-F7-dZb" secondAttribute="centerY" constant="-50" id="aHw-XT-9Nb"/>
                             <constraint firstItem="CN7-IS-w4x" firstAttribute="centerX" secondItem="M2B-F7-dZb" secondAttribute="centerX" id="cBI-ll-kij"/>
                             <constraint firstItem="hDf-PI-Dr6" firstAttribute="centerX" secondItem="M2B-F7-dZb" secondAttribute="centerX" id="h6B-6R-pmF"/>
                             <constraint firstItem="1o8-ZE-6OU" firstAttribute="centerX" secondItem="M2B-F7-dZb" secondAttribute="centerX" id="lTd-ls-GYd"/>
+                            <constraint firstItem="bGn-wi-AYG" firstAttribute="trailing" secondItem="jHK-Po-Idg" secondAttribute="trailing" id="mgS-Rb-xsK"/>
+                            <constraint firstAttribute="bottom" secondItem="bGn-wi-AYG" secondAttribute="bottom" id="nzR-Hs-gPo"/>
                             <constraint firstItem="hDf-PI-Dr6" firstAttribute="centerY" secondItem="M2B-F7-dZb" secondAttribute="centerY" constant="-300" id="wHM-P9-1nA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jHK-Po-Idg"/>
@@ -239,7 +272,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fk7-EV-ZRc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1348" y="13"/>
+            <point key="canvasLocation" x="440.57971014492756" y="12.723214285714285"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="7Kq-Md-DeB">
@@ -305,7 +338,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AFU-it-l8D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-572" y="746"/>
+            <point key="canvasLocation" x="1370" y="13"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="MGS-bC-O6W">
@@ -401,7 +434,7 @@
                                     <constraint firstAttribute="width" constant="350" id="CjV-f9-f6M"/>
                                     <constraint firstAttribute="height" constant="65" id="cyl-xq-xfo"/>
                                 </constraints>
-                                <state key="normal" title="MADRID MEDIEVAL">
+                                <state key="normal" title="ACTIVAR UBICACIÓN">
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
                             </button>
@@ -412,7 +445,7 @@
                                     <constraint firstAttribute="height" constant="65" id="EkX-ty-rE2"/>
                                     <constraint firstAttribute="width" constant="350" id="WJO-CV-JrT"/>
                                 </constraints>
-                                <state key="normal" title="MADRID MEDIEVAL">
+                                <state key="normal" title="AJUSTES DE PRIVACIDAD">
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
                             </button>
@@ -423,7 +456,7 @@
                                     <constraint firstAttribute="width" constant="350" id="F4P-Cb-jFH"/>
                                     <constraint firstAttribute="height" constant="65" id="F7U-OM-FtO"/>
                                 </constraints>
-                                <state key="normal" title="MADRID MEDIEVAL">
+                                <state key="normal" title="CAMBIAR CONTRASEÑA">
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
                             </button>
@@ -444,7 +477,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hHZ-jz-Lcm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1358" y="746"/>
+            <point key="canvasLocation" x="-572" y="746"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="qwerty.jpg" width="760" height="1318"/>
+    </resources>
 </document>
